# nanomap_benchmark

./: CMakeLists.txt  README.md  package.xml
config/benchmark/freiburgDepthCamera/: Agent.txt  openniDepth.txt  parallelConfig.txt  vdbConfig.txt  voxelizedConfig.txt
config/benchmark/frustum/: 640x480.txt  Agent.txt  parallelConfig.txt  vdbConfig.txt  voxelizedConfig.txt
config/benchmark/laser/: Agent.txt  VLP16.txt  vdbConfig.txt  voxelizedConfig.txt
src/: benchmark.cpp
