<?xml version="1.0"?>
<package format="3">
  <name>nanomap_benchmark
  </name>
  <version>0.0.0</version>
  <description>
    nanomap_benchmark is a package containing the code for benchmaking the nanomap library using sensor and pose data from a rosbag.
  </description>
  <maintainer email="violet.walker.phd@gmail.com">Violet Walker</maintainer>
  <license>BSD</license>

  <author>Violet Walker</author>
  <author email="violet.walker.phd@gmail.com">Violet Walker</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>ament_index_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>pcl_conversions</depend>
  <depend>octomap_ros</depend>
  <depend>pcl</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
