<?xml version="1.0"?>
<package format="2">
  <name>nanomap_benchmark</name>
  <version>0.0.1</version>
  <description>nanomap_benchmark</description>
  <maintainer email="violet.walker.phd@gmail.com">Violet Walker</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosbag</depend>
  <depend>rosfmt</depend>
  <depend>backward_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_ros</depend>
  <export/>
</package>
